--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:22.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // https://mvnrepository.com/artifact/com.android.volley/volley
     compile group: 'com.android.volley', name: 'volley', version: '1.1.1'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
