--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomAppTheme">
-        <activity android:name=".controllers.AlertDialogFragmentTwoButtons"></activity>
+        <activity
+            android:name=".controllers.SettingsActivity"
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".controllers.AlertDialogFragmentTwoButtons" />
         <activity android:name=".controllers.EditWorkoutActivity" />
         <activity android:name=".controllers.PerformWorkoutActivity" />
         <activity android:name=".controllers.SelectWorkoutActivity" />
